# grpc-demo

./: Makefile.am  autogen.sh  configure.ac
tests/: Makefile.am  demo.proto  test-grpc.cc
tests/data/: crt.pem  key.pem  keypair.sh
